# ecom

./: .env  Cargo.toml
src/: main.rs
src/config/: config.rs
src/handler/: mod.rs  user.rs
src/model/: mod.rs
src/routes/: mod.rs
src/utils/: mod.rs  model.rs
